Урок 7. Получение данных и загрузка изображений
Задание 7
1. Используйте Retrofit для получения данных с сервера.
2. Используйте Glide или Picasso для загрузки изображений.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
+
 }
 
 android {
@@ -64,4 +66,12 @@ dependencies {
 
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava:2.5.0"
+
+    // picasso
+    implementation "com.squareup.picasso:picasso:2.71828"
 }
